# ai-japan-number-plate-recognition

./: CMakeLists.txt  README.md  config.yaml  detect-cv2-display.py  detect-cv2.py  detect-edge-tpu-cv2.py  detect-edge-tpu.py  detect-onnx.py  detect-v2-cv2.py  detect-v2.py  detect.py  export.py  main.cpp  readme-jp.md  test.py
CPP/: CMakeLists.txt  main.cpp
ai-model/: best_int8.tflite  best_int8_new.tflite  edgetpu.tflite  model.onnx  model.onnx.data  yolo11n_edgetpu.tflite
ai-model/best_ncnn_model/: metadata.yaml  model.ncnn.param
test/: focus_camera-v2.py  focus_camera.py  test_image.py  test_local.py  test_local_lite.py
